made removeDupes method more efficient